--- a/app/src/main/res/layout/activity_result_from_search.xml
+++ b/app/src/main/res/layout/activity_result_from_search.xml
@@ -11,6 +11,15 @@
     android:scrollbars="vertical"
     android:verticalScrollbarPosition="right">
 
+    <Spinner
+        android:id="@+id/images_list_spinner"
+        android:layout_width="176dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fruitSeedSeedPersistenceFill" />
+
     <TextView
         android:id="@+id/specificationInfo"
         android:layout_width="wrap_content"
